--- a/CaseStoreApp/templates/login.html
+++ b/CaseStoreApp/templates/login.html
@@ -13,7 +13,7 @@
         <div class="col-md-6">
             <div class="card">
                 <div class="card-header">
-                    <h2>Login</h2>
+                    <h2>Login :)</h2>
                 </div>
                 <div class="card-body">
                     {% if error %}
